--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/forms": "^0.5.3",
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^6.6.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
