--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
+    "react-router-hash-link": "^2.4.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-router-hash-link": "^2.4.5",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
