--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-to-image": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
@@ -28,6 +29,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-helmet": "^6.1.6",
     "@types/react-router-hash-link": "^2.4.5",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
